--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   validatorless: 1.2.3
   google_fonts: 4.0.4
   device_preview: 1.1.0
+  supabase_flutter: 1.8.1
 
 dev_dependencies:
   flutter_test:
