--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: 1.0.5
   get: 4.6.5
+  get_storage: 2.1.1
   validatorless: 1.2.3
   google_fonts: 4.0.4
   device_preview: 1.1.0
