--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,11 +20,13 @@ dependencies:
   logger: 1.3.0
   flutter_dotenv: 5.0.2
   dio: 5.1.1
+  flutter_launcher_icons: 0.13.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  flutter_native_splash: 2.2.19
 
 flutter:
   uses-material-design: true
@@ -38,3 +40,7 @@ flutter:
   #       - asset: fonts/Schyler-Regular.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
+
+flutter_native_splash:
+  image: "assets/logo.png"
+  color: '#FFFFFF'
