--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_dotenv: 5.0.2
   dio: 5.1.1
   flutter_launcher_icons: 0.13.1
+  firebase_core: 2.10.0
 
 dev_dependencies:
   flutter_test:
