--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   dio: 5.1.1
   flutter_launcher_icons: 0.13.1
   firebase_core: 2.10.0
+  firebase_messaging: 14.4.1
+  flutter_local_notifications: 14.0.0+1
 
 dev_dependencies:
   flutter_test:
